validator_derive_tests/tests/compile-fail/must_match/field_doesnt_exist.stderr
error: Invalid attribute for #[validate(must_match(...))] on field `password`:
 --> tests/compile-fail/must_match/field_doesnt_exist.rs:5:35
  |
5 |     #[validate(must_match(other = password2))]
  |                                   ^^^^^^^^^
  |
  = note: The `other` field doesn't exist in the struct `Test`
  = help: Add the field `password2` to the struct
